--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 theme: jekyll-theme-cayman
 paginate: 5
 paginate_path: "/:num/"
-baseurl: "/YoutubeChannelWebsite/"
+baseurl: "/"
+plugins:
+  - jekyll-sitemap
