--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
     name: Youtube-Page-Generator
-        
-    on: push
+          
+    on:
+      workflow_dispatch:
+        branches:
+          - main
 
     jobs:
       build:
